--- a/games.html
+++ b/games.html
@@ -9,7 +9,8 @@
     />
     <title>Sports7 | Games</title>
     <link rel="stylesheet" href="./style.css" />
-    <script src="script.js" defer></script>
+    <script src="games.js" defer></script>
+    <script src="script.js"></script>
   </head>
   <body>
     <div class="page-container" id="main">
@@ -26,75 +27,8 @@
         </button>
       </div>
       <div class="carousel">
-        <div class="slides">
-          <a href="#" class="slide">
-            <img class="img" src="assets/xsmall (9) 1.png" alt="" />
+        <div class="slides games">
 
-            <div class="slide-title game-slide">
-              <div>
-                <p>Badland</p>
-                <p class="game-slide-desc">Game Description</p>
-              </div>
-              <div class="game-slide-play">
-                <span>PLAY</span>
-                <img src="assets//Polygon.svg" alt="polygon">
-            </div>
-
-
-            </div>
-          </a>
-          <a href="#" class="slide">
-            <img class="img" src="assets/xsmall.png" alt="" />
-            <div class="slide-title game-slide">
-              <div>
-                <p>Badland</p>
-                <p class="game-slide-desc">Game Description</p>
-              </div>
-              <div class="game-slide-play">
-                <span>PLAY</span>
-                <img src="assets//Polygon.svg" alt="polygon">
-            </div>
-            </div>
-          </a>
-          <a href="#" class="slide">
-            <img class="img" src="assets/xsmall (6) 1.png" alt="" />
-            <div class="slide-title game-slide">
-              <div>
-                <p>Badland</p>
-                <p class="game-slide-desc">Game Description</p>
-              </div>
-              <div class="game-slide-play">
-                <span>PLAY</span>
-                <img src="assets//Polygon.svg" alt="polygon">
-            </div>
-            </div>
-          </a>
-          <a href="#" class="slide">
-            <img class="img" src="assets/xsmall2.png" alt="" />
-            <div class="slide-title game-slide">
-              <div>
-                <p>Badland</p>
-                <p class="game-slide-desc">Game Description</p>
-              </div>
-              <div class="game-slide-play">
-                <span>PLAY</span>
-                <img src="assets//Polygon.svg" alt="polygon">
-            </div>
-            </div>
-          </a>
-          <a href="#" class="slide">
-            <img class="img" src="assets/xsmall4.png" alt="" />
-            <div class="slide-title game-slide">
-              <div>
-                <p>Badland</p>
-                <p class="game-slide-desc">Game Description</p>
-              </div>
-              <div class="game-slide-play">
-                <span>PLAY</span>
-                <img src="assets//Polygon.svg" alt="polygon">
-            </div>
-            </div>
-          </a>
         </div>
         <button class="prev">&#10094;</button>
         <button class="next">&#10095;</button>
@@ -103,7 +37,7 @@
       <div class="games">
         <h3>Featured Games</h3>
         <div class="featured-games">
-          <div>
+          <!-- <div>
             <a href="#" class="item ">
               <img src="assets/xsmall (1) 1.png" alt="Mouse Maze" />
               <div class="game-play">
@@ -172,7 +106,7 @@
             </div>
             </a>
             <p>Mouse <span>Maze</span></p>
-          </div>
+          </div> -->
         </div>
       </div>
       <footer>
