"Refactored games.js, index.html, script.js, and video.js files; removed testFile.js and video.js files; updated code organization and functionality."

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                   <h4>Archery</h4>
                 </div>
               </a>
+              
             </div>
             <button class="prev">&#10094;</button>
             <button class="next">&#10095;</button>
@@ -70,21 +71,21 @@
                     </div>
                 </a> -->
             </div>
-            <!-- <h3>More Videos</h3>
+            <h3>More Videos</h3>
             <div class="more-video" id="moreVideos">
-                <a href="#" class="video-item">
+                <!-- <a href="#" class="video-item">
                     <img src="assets/sport7img.jpeg" alt="More Video 1" />
                     <div class="video-title">
                         <p>Video title</p>
                         <p class="video-desc">Video desc</p>
                     </div>
-                </a>
-            </div> -->
+                </a> -->
+            </div>
         </div>
 
         <footer>
             <p>Sports7</p>
-            <!-- <p>Links and copyright info</p> -->
+            <p>Links and copyright info</p>
         </footer>
     </div>
     <script src="script.js" defer></script>
